fix alignment of code-dt with p element in dd for dl-tree

--- a/oxygen-framework/css/outputclasses/dl-outputclasses.less
+++ b/oxygen-framework/css/outputclasses/dl-outputclasses.less
@@ -327,6 +327,10 @@
     font-weight : 	normal;
 }
 
+*[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dt"][*|flags~="code"] {
+    margin-top	: 0.5em;
+}
+
 *[class~='topic/dl'][outputclass~='tree'] *[class~="topic/dlentry"] > *[class~="topic/dd"] {
 	margin-top: -1.4em;
 }
